--- a/html/index.html
+++ b/html/index.html
@@ -173,7 +173,7 @@
           <div class="px-lg-3">
             <h4 class="wow fadeInUp">Design Skills</h4>
             <div class="progress-wrapper wow fadeInUp">
-              <span class="caption">UI / UX Design</span>
+              <span class="caption">Diseño UI / UX</span>
               <div class="progress">
                 <div class="progress-bar" role="progressbar" style="width: 92%;" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100">92%</div>
               </div>
